SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/CPQ_Quote_Approver__c.object-meta.xml
<CustomObject>
    <description>Quote level approver for CPQ Playbook Approvals. Matches up to CPQ Playbook Approver</description>
    <label>CPQ Quote Approver</label>
    <nameField>
        <label>Quote Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Quote Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>