SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CPQ_Quote_Approval_Step__r.CPQ_Quote_Approval__r.Quote__r.Opportunity.AccountId, Account__c, &quot;_self&quot; )</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>