SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <formula>CPQ_Quote_Approval_Step__r.CPQ_Quote_Approval__r.CPQ_Playbook_Approval__r.Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval</label>
    <type>Text</type>
</CustomField>