SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Approvals_Hub_Link__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Hub_Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/n/CPQ_Approvals&quot;, &quot;Detailed View of CPQ Approvals&quot;, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approvals Link</label>
    <type>Text</type>
</CustomField>