SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Most recent date where status changed to Approved</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>