SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver that needs to approve this approver record</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPQ_Quote_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>