SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/CPQ_Playbook_Approver__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Approver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Approver that dictates who this approver is</description>
    <label>CPQ Playbook Approver</label>
    <referenceTo>CPQ_Playbook_Approver__c</referenceTo>
    <relationshipLabel>CPQ Quote Approvers</relationshipLabel>
    <relationshipName>CPQ_Quote_Approvers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>