SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/CPQ_Quote_Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Quote_Approval_Step__c</fullName>
    <description>Approval step for which record is an approver</description>
    <label>CPQ Quote Approval Step</label>
    <referenceTo>CPQ_Quote_Approval_Step__c</referenceTo>
    <relationshipLabel>CPQ Quote Approvers</relationshipLabel>
    <relationshipName>CPQ_Quote_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>