SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <description>Reason/Justification for approver's decision to reject/approve the approval</description>
    <inlineHelpText>Reason/Justification for approver's decision to reject/approve the approval</inlineHelpText>
    <label>Decision Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>