SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CPQ_Quote_Approval_Step__r.CPQ_Quote_Approval__r.Quote__r.OpportunityId, Opportunity__c, &quot;_self&quot; )</formula>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>