SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <formula>CPQ_Quote_Approval_Step__r.CPQ_Quote_Approval__r.Quote__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Id</label>
    <type>Text</type>
</CustomField>