SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Recalled_Date__c.field-meta.xml
<CustomField>
    <fullName>Recalled_Date__c</fullName>
    <description>Most recent date where status changed to Recalled</description>
    <label>Recalled Date</label>
    <type>Date</type>
</CustomField>