SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>Most recent date where status changed to Rejected</description>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>