SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approver__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Most recent date where status changed to Submitted</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>